OneDrive/Pictures/Desktop/workshop k8s/workshopk8s/customermanagementapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customermanagementapi
spec:
  replicas: 1
  selector:
    matchLabels:
      name: customermanagementapi
  template:
    metadata:
      labels:
        name: customermanagementapi
    spec:
      containers:
      - name: customermanagementapi
        image: pitstop/customermanagementapi:1.0
        ports:
        - containerPort: 5100
        resources:
            limits:
              cpu: "2000m"
              memory: "1500Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: customermanagementapi
spec:
  ports:
  - name: http
    port: 5100
    targetPort: 5100
  selector:
    name: customermanagementapi


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: customer
spec:
  rules:
   - host: customer-example.com  
     http:
        paths: 
         -  path: Prefix
            pathType: /foo/bar
            backend:
               service:
                  name:  customermanagementapi
                  port: 
                    name: auditlogs
                    number: 80
