OneDrive/Pictures/Desktop/workshop k8s/workshopk8s/logserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logserver
spec:
  selector:
    matchLabels:
      name: logserver
  template:
    metadata:
      labels:
        name: logserver
    spec:
      containers:
      - name: logserver
        image: datalust/seq:latest
        resources:
          limits:
            memory: "1500Mi"
            cpu: "1000m"
        ports:
           - name: logserver-serv
             containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: logserver
spec:
  ports:
  - name: smtp
    port: 80
    targetPort: 80
  selector:
    name: logserver           
          
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: logserver  
spec:
  rules:
   - host: logserver-example.com  
     http:
        paths: 
         -  path: Prefix
            pathType: /foo/bar
            backend:
               service:
                  name:  logserver  
                  port: 
                    name: auditlogs
                    number: 80
