OneDrive/Pictures/Desktop/workshop k8s/workshopk8s/mailserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailserver
spec:
  selector:
    matchLabels:
      name: mailserver
  template:
    metadata:
      labels:
        name: mailserver
    spec:
      containers:
      - name: mailserver
        image: maildev/maildev:1.1.0
        resources:
          limits:
            memory: "1500Mi"
            cpu: "1000m"
        ports:
           - name: mailserver-serv
             containerPort: 25
           - name: mailserver-comm
             containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: mailserver
spec:
  ports:
  - name: smtp
    port: 25
    targetPort: 25
  - name: http
    port: 80
    targetPort: 80
  selector:
    name: mailserver           
          
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: mailserver 
spec:
  rules:
   - host: mailserver-example.com  
     http:
        paths: 
         -  path: Prefix
            pathType: /foo/bar
            backend:
               service:
                  name: mailserver   
                  port: 
                    name: mailserver 
                    number: 80
