OneDrive/Pictures/Desktop/workshop k8s/workshopk8s/notificationservice.YAML
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      name: notificationservice
  template:
    metadata:
      labels:
        name: notificationservice
    spec:
      containers:
       - name: notificationservice
         image: pitstop/notificationservice:1.0
         ports:
            - containerPort: 80
         resources:
          limits:
            memory: "1500Mi"
            cpu: "1000m"
        
---
apiVersion: v1
kind: Service
metadata:
  name: notificationservice
spec:
  selector:
    name: notificationservice
  ports:
   - name: http
     port: 80
     targetPort: 80 
  
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: notificationservice
spec:
  rules:
   - host: notificationservicer-example.com  
     http:
        paths: 
         -  path: Prefix
            pathType: /foo/bar
            backend:
               service:
                  name: notificationservice   
                  port: 
                    name: notificationservice 
                    number: 80
