OneDrive/Pictures/Desktop/workshop k8s/workshopk8s/rabbitmq.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
   name: rabbitmq
spec:
   minReadySeconds: 5
   replicas: 1
   selector:
       matchLabels: 
         name: rabbitmq
   serviceName: rabbitmq
   template:
       metadata:
         labels:
           name:  rabbitmq
       spec: 
         containers:
           - name: rabbitmq
             image: rabbitmq:3-management-alpine
             ports:
              - containerPort: 15672
                name: rabbitm
              - containerPort: 5672
                name: rabbitmq
             resources:
               limits:
                 cpu: "2500m"
                 memory: "4200Mi"
             volumeMounts:
                  - mountPath: /var/lib/rabbitmq
                    name: rabbitmq
                  - mountPath: /etc/pitstop/mnt
                    name: rabbitmq
   updateStrategy:
       type: RollingUpdate
       rollingUpdate:
          maxUnavailable: 50%
   volumeClaimTemplates:
         - metadata: 
               name: rabbitmq
           spec:
             accessModes: 
                - ReadWriteOnce
             resources:
                requests:
                   storage: 5Gi
             storageClassName: managed
             selector:
               matchLabels:
                   name:  rabbitmq
---

apiVersion: v1
kind: Service
metadata:
   name: rabbitmq
spec:
   selector:
    name: rabbitmq
   ports:
     - name: rabbitm
       port: 15672
       targetPort: 15672
     - name: rabbitmq
       port: 5672
       targetPort: 5672

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: rabbitmq
spec:
  rules:
   - host: rabbitmq-example.com  
     http:
        paths: 
         -  path: Prefix
            pathType: /foo/bar
            backend:
               service:
                  name: rabbitmq   
                  port: 
                    name: rabbitmq 
                    number: 80
