OneDrive/Pictures/Desktop/workshop k8s/workshopk8s/sqlserver.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
   name: sqlserver
spec:
   minReadySeconds: 5
   replicas: 1
   selector:
       matchLabels: 
         name: sqlserver
   serviceName: sqlserver
   template:
       metadata:
         labels:
          name: sqlserver
       spec: 
         containers:
           - name: sqlserver
             image: mcr.microsoft.com/azure-sql-edge
             ports:
               - name: sqlserve
                 containerPort: 15672
               - name: sqlserver
                 containerPort: 5672
             resources:
                limits:
                    cpu: "2500m"
                    memory: "4200Mi"
             volumeMounts:
                - name: sqlserver
                  mountPath: /var/opt/mssql
   updateStrategy:
       type: RollingUpdate
       rollingUpdate:
          maxUnavailable: 50%
   volumeClaimTemplates:
         - metadata: 
               name: sqlserver
           spec:
             accessModes: 
                - ReadWriteOnce
             resources:
                requests:
                   storage: 5Gi
             storageClassName: managed
             selector:
               matchLabels:
                   name: sqlserver
---

apiVersion: v1
kind: Service
metadata:
   name: sqlserver
spec:
   selector:
    name: sqlserver
   ports:
     - name: sqlserver-management
       port: 15672
       targetPort: 15672
     - name: sqlserver-communication
       port: 5672
       targetPort: 5672
    
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: sqlserver
spec:
  rules:
   - host: sqlserver-example.com  
     http:
        paths: 
         -  path: Prefix
            pathType: /foo/bar
            backend:
               service:
                  name: sqlserver   
                  port: 
                    name: sqlserver 
                    number: 80
