OneDrive/Pictures/Desktop/workshop k8s/workshopk8s/vehiclemanagementapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehiclemanagementapi
spec:
  replicas: 1
  selector:
    matchLabels:
      name: vehiclemanagementapi
  template:
    metadata:
      labels:
        name: vehiclemanagementapi
    spec:
      containers:
       - name: vehiclemanagementapi
         image: pitstop/vehiclemanagementapi:1.0
         ports:
           - containerPort: 5000
         resources:
            limits:
              cpu: "1500m"
              memory: "1000Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: vehiclemanagementapi
spec:
  ports:
  - name: http
    port: 5000
    targetPort: 5000
  selector:
    name: vehiclemanagementapi

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: vehiclemanagementapi
spec:
  rules:
   - host: vehiclemanagementapi-example.com  
     http:
        paths: 
         -  path: Prefix
            pathType: /foo/bar
            backend:
               service:
                  name: vehiclemanagementapi   
                  port: 
                    name: vehiclemanagementapi 
                    number: 80
