OneDrive/Pictures/Desktop/workshop k8s/workshopk8s/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      name: webapp
  template:
    metadata:
      labels:
        name: webapp
    spec:
      containers:
       - name: webapp
         image: pitstop/webapp:1.0
         ports:
            - containerPort: 7005
         resources:
           limits:
              cpu: "2500m"
              memory: "4200Mi"
        
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  selector:
    name: webapp
  ports:
  - name: http
    port: 7005
    targetPort: 7005

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  rules:
  - host: webapp-example.com  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 7005

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: webapp
spec:
  rules:
   - host: webapp-example.com  
     http:
        paths: 
         -  path: Prefix
            pathType: /foo/bar
            backend:
               service:
                  name: webapp   
                  port: 
                    name: webapp 
                    number: 80
